--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "framer-motion": "^12.6.2",
     "link": "^2.1.1",
     "mongoose": "^8.13.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1"
