--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "framer-motion": "^12.6.2",
+    "framer-motion": "^12.6.3",
     "link": "^2.1.1",
+    "lucide-react": "^0.487.0",
     "mongoose": "^8.13.1",
     "react": "^19.0.0",
     "react-datepicker": "^8.2.1",
